--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -85,7 +85,7 @@
 
     <servlet>
         <servlet-name>addToCart</servlet-name>
-        <servlet-class>com.internet.shop.controllers.AddToCartController</servlet-class>
+        <servlet-class>com.internet.shop.controllers.AddProductToCartController</servlet-class>
     </servlet>
 
     <servlet-mapping>
